--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,8 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Arimo&family=Fira+Sans:wght@300;400&family=Montserrat:wght@400;500;600&family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&family=Teko:wght@300;400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Arimo&family=Fira+Sans:wght@300;400&family=Montserrat:wght@400;500;600&family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&family=Roboto:wght@100;300;400;500;700&family=Teko:wght@300;400&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
